# img-gen

./: .gitignore  Dockerfile  Makefile  README.md  image_gen_1.ipynb  image_gen_2.ipynb  image_gen_3.ipynb  image_gen_4.ipynb  image_gen_5.ipynb  openimages.py  pyproject.toml  requirements.txt  setup.py  train.ipynb  train.py  train_colab.ipynb
img_gen/: cycle_gan.py  data.py  gan.py  img.py  models.py  openimages.py  storage.py
img_gen.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: colab_train.ipynb  monet.ipynb
notebooks/tutorials/: image_gen_3.ipynb  image_gen_4.ipynb  image_gen_5.ipynb
optimization_results/cycle_gan/: oracle.json
optimization_results/cycle_gan/trial_181745a7a0e908ab8230f0181ef8b4c3/: trial.json
tests/: test_img_gen.py
