[tool.poetry]
name = "img-gen"
version = "0.1.0"
description = ""
authors = ["Jules Youngberg <julesdayoungberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
tensorflow-addons = "^0.13.0"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
