[tool.poetry]
name = "img-gen"
version = "0.1.0"
description = ""
authors = ["Jules Youngberg <julesdayoungberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.5.0"
tensorflow-addons = "^0.13.0"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
numpy = "^1.19.2"
tensorflow-datasets = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
